@@ -500,6 +500,146 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testEvaluateUnicodeChars
+parameter_list|()
+block|{
+name|ASTEqual
+name|equalToFull
+init|=
+operator|new
+name|ASTEqual
+argument_list|(
+operator|new
+name|ASTObjPath
+argument_list|(
+literal|"artistName"
+argument_list|)
+argument_list|,
+literal|"Ã Ð±Ã§ÄÃ¾"
+argument_list|)
+decl_stmt|;
+name|ASTEqual
+name|equalToSimple
+init|=
+operator|new
+name|ASTEqual
+argument_list|(
+operator|new
+name|ASTObjPath
+argument_list|(
+literal|"artistName"
+argument_list|)
+argument_list|,
+literal|"Ã ÄÃ§"
+argument_list|)
+decl_stmt|;
+name|Artist
+name|noMatch
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|noMatch
+operator|.
+name|setArtistName
+argument_list|(
+literal|"agc"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|equalToSimple
+operator|.
+name|match
+argument_list|(
+name|noMatch
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|equalToFull
+operator|.
+name|match
+argument_list|(
+name|noMatch
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artist
+name|matchSimple
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|matchSimple
+operator|.
+name|setArtistName
+argument_list|(
+literal|"Ã ÄÃ§"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|equalToSimple
+operator|.
+name|match
+argument_list|(
+name|matchSimple
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|equalToFull
+operator|.
+name|match
+argument_list|(
+name|matchSimple
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artist
+name|matchFull
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|matchFull
+operator|.
+name|setArtistName
+argument_list|(
+literal|"Ã Ð±Ã§ÄÃ¾"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|equalToSimple
+operator|.
+name|match
+argument_list|(
+name|matchFull
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|equalToFull
+operator|.
+name|match
+argument_list|(
+name|matchFull
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
