@@ -535,6 +535,162 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testEvaluateUnicode
+parameter_list|()
+block|{
+name|Expression
+name|like
+init|=
+operator|new
+name|ASTLike
+argument_list|(
+operator|new
+name|ASTObjPath
+argument_list|(
+literal|"artistName"
+argument_list|)
+argument_list|,
+literal|"Ã Ð±ÄÃ¾%"
+argument_list|)
+decl_stmt|;
+name|Expression
+name|notLike
+init|=
+operator|new
+name|ASTNotLike
+argument_list|(
+operator|new
+name|ASTObjPath
+argument_list|(
+literal|"artistName"
+argument_list|)
+argument_list|,
+literal|"Ã Ð±ÄÃ¾%"
+argument_list|)
+decl_stmt|;
+name|Artist
+name|noMatch1
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|noMatch1
+operator|.
+name|setArtistName
+argument_list|(
+literal|"Ã bÄÃ¾d"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|like
+operator|.
+name|match
+argument_list|(
+name|noMatch1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|notLike
+operator|.
+name|match
+argument_list|(
+name|noMatch1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artist
+name|match1
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|match1
+operator|.
+name|setArtistName
+argument_list|(
+literal|"Ã Ð±ÄÃ¾"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Failed: "
+operator|+
+name|like
+argument_list|,
+name|like
+operator|.
+name|match
+argument_list|(
+name|match1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Failed: "
+operator|+
+name|notLike
+argument_list|,
+name|notLike
+operator|.
+name|match
+argument_list|(
+name|match1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artist
+name|match2
+init|=
+operator|new
+name|Artist
+argument_list|()
+decl_stmt|;
+name|match2
+operator|.
+name|setArtistName
+argument_list|(
+literal|"Ã Ð±ÄÃ¾a"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Failed: "
+operator|+
+name|like
+argument_list|,
+name|like
+operator|.
+name|match
+argument_list|(
+name|match2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Failed: "
+operator|+
+name|notLike
+argument_list|,
+name|notLike
+operator|.
+name|match
+argument_list|(
+name|match2
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
